<resources>
    <string name="app_name">LibertAÇÃO</string>
    <string name="obrigatorio">Obrigatório</string>
    <string name="passwordNotMatch">Senhas não coincidem</string>
    <string name="all">Todos</string>
    <string name="nearMe">Perto de mim</string>
    <string name="admin">Admin</string>
    <string name="adminOldEvents">Antigos</string>
    <string name="thirdPartyNew">Notícias externas</string>
    <plurals name="event">
        <item quantity="one">Evento</item>
        <item quantity="other">Eventos</item>
    </plurals>
    <plurals name="vakinha">
        <item quantity="one">Vakinha</item>
        <item quantity="other">Vakinhas</item>
    </plurals>
    <plurals name="petition">
        <item quantity="one">Petição</item>
        <item quantity="other">Petições</item>
    </plurals>
    <plurals name="protest">
        <item quantity="one">Protesto</item>
        <item quantity="other">Protestos</item>
    </plurals>
    <plurals name="singleNew">
        <item quantity="one">Notícia</item>
        <item quantity="other">Notícias</item>
    </plurals>
    <plurals name="variado">
        <item quantity="one">Variado</item>
        <item quantity="other">Variados</item>
    </plurals>
    <string name="no_internet_connection">Sem conexão com a Internet. Para atualizar as informações, conecte-se a uma rede.</string>
    <string name="critical_error">Alguma coisa realmente errada aconteceu. Por favor, feche e reabra a aplicação.</string>
    <string name="unknown_error">Alguma coisa errada aconteceu</string>
    <string name="eventNotFound">Não foi encontrado o evento selecionado</string>
    <string name="navigation_drawer_open">Abrir painel de navegação</string>
    <string name="navigation_drawer_close">Fechar painel de navegação</string>
    <string name="drawer_notificacoes">Notificações</string>
    <string name="drawer_cadastro">Cadastre-se</string>
    <string name="drawer_perfil">Perfil</string>
    <string name="drawer_admin">Administrar</string>
    <string name="drawer_contato">Contato</string>
    <string name="drawer_other_apps">Apps veganos</string>
    <string name="drawer_about">Sobre</string>
    <string name="empty_event_list">Sem nenhum evento nesta categoria :(…</string>
    <string name="empty_news_list">Sem nenhuma notícia :(…</string>
    <string name="share">Compartilhar</string>
    <string name="profile">Perfil</string>
    <string name="profile_username">Username:</string>
    <string name="enableNotifications">Habilitar notificações? Por padrão elas estão habilitadas, mas você pode habilitar/desabilitar a qualquer hora.</string>
    <string name="logout">Sair da conta</string>
    <string name="performingLogout">Saindo</string>
    <string name="performedLogoutSuccess">Deslogado!</string>
    <string name="performedLogoutError">Erro! Não foi possível fazer logout… Tente novamente mais tarde.</string>
    <string name="areYouSureYouWantToLogout">Você tem certeza que deseja sair da sua conta?</string>
    <string name="login">Login</string>
    <string name="forgotPassword">Esqueceu a senha?</string>
    <string name="signUp"><u>Cadastre-se</u></string>
    <string name="emailHint">E-mail</string>
    <string name="passwordHint">Senha</string>
    <string name="welcomeUser">Bem-vinda(o) %1$s!</string>
    <string name="invalidCredentials">Usuário e senha incorretos. Se você não possui uma conta, clique em "Cadastre-se".</string>
    <string name="unknownLoginError">Não foi possível fazer o login. Por favor, tente novamente mais tarde. Se você não possui uma conta, clique em "Cadastre-se".</string>
    <string name="facebookLoginError">Erro ao tentar logar com o Facebook</string>
    <string-array name="my_facebook_permissions">
        <item>public_profile</item>
        <item>user_friends</item>
    </string-array>
    <string name="forgotPasswordInstructions">Entre seu e-mail para recuperar sua senha</string>
    <string name="recoverPassword">Recuperar senha</string>
    <string name="unknownHelpError">Não foi possível fazer o reset da senha. Por favor, tente novamente mais tarde.</string>
    <string name="helpSuccess">Por favor, cheque seu e-mail para instruções de como acessar sua conta</string>
    <string name="helpBackToLogin">Voltar para a tela de login</string>
    <string name="createAccount">Criar conta</string>
    <string name="usernameHint">Username</string>
    <string name="confirmPasswordHint">Confirmar senha</string>
    <string name="invalidEmail">E-mail inválido! Corrija e tente novamente.</string>
    <string name="emailTaken">E-mail já cadastrado, você já pode se logar com ele</string>
    <string name="usernameTaken">Username já cadastrado! Por favor, escolha outro.</string>
    <string name="unknownSignupError">Não foi possível fazer o cadastro. Por favor, tente novamente mais tarde.</string>
    <string name="orderBy">Ordenar por…</string>
    <string name="orderByDate">Data</string>
    <string name="orderByLastUpdated">Mais atualizados</string>
    <string name="orderByMostPopular">Mais populares</string>
    <string name="mustBeLoggedIn">Você precisa estar logado para acessar essa página</string>
    <string name="eventInitialDateToday">%1$s (%2$s)</string>
    <string name="eventInitialAndEndDateSameDay">%1$s às %2$s</string>
    <string name="eventInitialAndEndDateDifferentDay">%1$s até %2$s</string>
    <string name="going">Vou!</string>
    <string name="goingNumber">%1$s indo</string>
    <string name="participarDaAcao">Vou participar da ação</string>
    <string name="notFoundActivity">Erro! Não foi encontrado nenhum app capaz de abrir essa URL.</string>
    <string name="fetchingEvent">Buscando evento</string>
    <string name="addEvent">Adicionar evento</string>
    <string name="sendPush">Enviar push</string>
    <string name="sendingPush">Enviando push</string>
    <string name="editEvent">Editar evento</string>
    <string name="activateEvent">Ativar evento</string>
    <string name="deactivateEvent">Desativar evento</string>
    <string name="deleteEvent">Deletar evento</string>
    <string name="createNewEvent">Criar novo evento</string>
    <string name="selectPhotoToEventInfo">Clique abaixo para selecionar uma foto para o evento:</string>
    <string name="title">Título (Feira Vegana)</string>
    <string name="description">Descrição (Venha participar da Feira Vegana…)</string>
    <string name="initialDate">Data (inicial): 22/10</string>
    <string name="initialHour">20h</string>
    <string name="endDate">Data final (opcional): 22/10</string>
    <string name="endHour">21h</string>
    <string name="linkUrl">Link URL (opcional)</string>
    <string name="linkText">Link texto (opcional)</string>
    <string name="locationSummary">Localização (Porto Alegre, RS)</string>
    <string name="locationDescription">Localização completa (Avenida Lajeado, 6520)</string>
    <string name="createEdit">Criar/editar</string>
    <string name="suggestEvent">Sugerir evento</string>
    <string name="saveEvent">Salvar</string>
    <string name="pickEventPlace">Escolher local do evento</string>
    <string name="photoSelectedSuccessfully">Foto selecionada com sucesso!</string>
    <string name="selectAnEventType">Por favor, selecione um tipo para o seu evento</string>
    <string name="selectADate">Por favor, selecione uma data para o seu evento</string>
    <string name="typeALink">Você forneceu um texto para aparecer junto com o link, mas não o link URL</string>
    <string name="latLngNotSet">Você forneceu uma localização textual, mas não selecionou a latitude/longitude por meio do mapa. Isso se
        tornará um evento global. Deseja continuar mesmo assim?</string>
    <string name="savingEvent">Salvando evento…</string>
    <string name="suggestingEvent">Sugerindo evento…</string>
    <string name="eventSavedError">Não foi possível salvar o evento. Tente novamente mais tarde.</string>
    <string name="eventSuggestedError">Não foi possível sugerir o evento :(. Por favor, tente novamente mais tarde.</string>
    <string name="eventSavedSuccessfully">Evento salvo com sucesso!</string>
    <string name="eventSuggestedSuccessfully">Evento sugerido com sucesso!</string>
    <string name="explanationDate">Seu evento será mostrado para os outros usuários do momento em que ele for aprovado até a sua data final. Caso não seja
        definida uma data final, ele será mostrado até a sua data inicial.</string>
    <string name="explanationLink">O campo \"Link URL\" deverá apontar para o site do evento (ou para o link do evento no Facebook). O campo \"Link texto\"
    é a mensagem a ser mostrada aos usuários para clicarem no link.</string>
    <string name="explanationLocation">Os campos Localização e Localização completa descrevem a localização do evento. Caso ele seja específico para
        pessoas de determinada localidade, selecione ela no mapa (caso não haja uma localização exata, escolha uma aproximada) - assim o evento só será
    mostrado para as pessoas daquele lugar. Caso ele não seja específico de nenhum lugar, NÃO selecione a localização no mapa - só forneça a
        localização nos campos de texto.</string>
    <string name="activate">Ativar</string>
    <string name="activateConfirm">Você tem certeza que deseja ativar esse evento?</string>
    <string name="activatingEvent">Ativando evento…</string>
    <string name="eventActivatedSuccessfully">Evento ativado com sucesso!</string>
    <string name="deactivate">Desativar</string>
    <string name="deactivateConfirm">Você tem certeza que deseja desativar esse evento?</string>
    <string name="deactivatingEvent">Desativando evento…</string>
    <string name="eventDeactivatedSuccessfully">Evento desativado com sucesso!</string>
    <string name="delete">Deletar</string>
    <string name="deleteConfirm">Você tem certeza que quer deletar esse evento? Essa alteração irá levar em torno de 30 minutos para ser
        refletida para os usuários. Caso você queira algo instantâneo, primeiro desative o evento, e após uma hora delete ele.</string>
    <string name="deletingEvent">Deletando evento…</string>
    <string name="eventDeletedSuccessfully">Evento deletado com sucesso!</string>
    <string name="alertTextHint">Texto do alerta (push notification) (máximo: 140 caracteres)</string>
    <string name="uriTextHint">URI</string>
    <string name="send">Enviar</string>
    <string name="pushSendError">Não foi possível enviar o push. Tente novamente mais tarde.</string>
    <string name="pushSendSuccess">Push enviado com sucesso!</string>
    <string name="send_push_only_local_info">Testar push localmente (só você receberá esse push. É útil para ter certeza que ele irá no formato que você definiu.)</string>
    <string name="areYouSureYouWantToSendPush">Você tem certeza que deseja enviar o push? Ele será enviado para TODOS os usuários do app.</string>
    <string name="selectAnEventForThisPushOptional">(Opcional) Selecione um evento</string>
    <string name="emailOptional">E-mail (opcional)</string>
    <string name="message">Digite aqui sua mensagem</string>
    <string name="contactExplanation">Possui alguma sugestão, crítica ou dúvida sobre o app? Preencha o formulário abaixo. Se você quiser receber uma resposta, preencha o campo e-mail; caso contrário, você enviará sua mensagem como anônimo e não poderemos dar uma resposta.</string>
    <string name="savingMessage">Enviando mensagem…</string>
    <string name="sendContact">Enviar mensagem</string>
    <string name="messageSavedError">Error! Não foi possível enviar sua mensagem. Tente novamente mais tarde.</string>
    <string name="likeOurPage">Curta nossa página no Facebook</string>
    <string name="goVeganForAnimalRights">Go vegan for the animal rights.</string>
    <string name="freeSoftware">Este aplicativo é de software livre, e se encontra no Github sob a licença GNU GPLv3. Clique aqui para acessar.</string>
</resources>