<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_edit_event"
        android:title="@string/editEvent"
        android:icon="@android:drawable/ic_menu_edit"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"/>
    <item
        android:id="@+id/menu_activate_event"
        android:title="@string/activateEvent"
        android:icon="@android:drawable/ic_menu_upload"
        app:showAsAction="ifRoom"
        android:orderInCategory="2"/>
    <item
        android:id="@+id/menu_delete_event"
        android:title="@string/deleteEvent"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="ifRoom"
        android:orderInCategory="3"/>
</menu>