<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/send_push_scroll_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.libertacao.libertacao.view.admin.SendPushActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/toolbar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/send_push_only_local_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/send_push_only_local_info"/>

            <EditText
                android:id="@+id/send_push_title_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:inputType="textCapWords"/>

            <EditText
                android:id="@+id/send_push_message_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/alertTextHint"
                android:inputType="textMultiLine"
                android:maxEms="140"/>

            <EditText
                android:id="@+id/send_push_uri_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:hint="@string/uriTextHint"
                android:inputType="textUri"/>

            <Spinner
                android:id="@+id/send_push_event_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <FrameLayout
                android:id="@+id/event_map"
                android:layout_width="match_parent"
                android:layout_height="@dimen/map_fragment_height"
                tools:background="@color/gray"/>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/send_push_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="@dimen/default_margin"
                android:src="@android:drawable/ic_menu_send"
                app:elevation="6dp"
                app:pressedTranslationZ="12dp"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>
