<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.libertacao.libertacao.view.perfil.PerfilFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/default_margin"
            android:gravity="end"
            style="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle"
            android:text="@string/profile_username"/>

        <TextView
            android:id="@+id/profile_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_margin="@dimen/default_margin"
            style="@style/TextAppearance.AppCompat.Large"
            tools:text="Ada Lovelace"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/default_margin"
            android:gravity="end"
            style="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle"
            android:text="@string/enableNotifications"/>

        <ToggleButton
            android:id="@+id/enable_notification_toogle_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/logout"
        android:layout_margin="@dimen/default_margin"/>

</LinearLayout>
